--- a/package.json
+++ b/package.json
@@ -17,14 +17,13 @@
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/localize": "^15.2.0",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "@progress/kendo-angular-common": "12.1.0",
-    "@progress/kendo-angular-grid": "^12.1.0",
+    "@progress/kendo-angular-excel-export": "12.1.0",
+    "@progress/kendo-angular-label": "12.1.0",
     "@progress/kendo-angular-pdf-export": "12.1.0",
-    "@progress/kendo-drawing": "^1.17.2",
-    "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-default": "^6.3.0",
     "bootstrap": "^5.2.3",
     "exceljs": "^4.3.0",
@@ -32,23 +31,7 @@
     "json-server": "^0.17.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.12.0",
-    "@progress/kendo-data-query": "^1.0.0",
-    "@progress/kendo-angular-buttons": "12.1.0",
-    "@progress/kendo-angular-dateinputs": "12.1.0",
-    "@progress/kendo-angular-dropdowns": "12.1.0",
-    "@progress/kendo-angular-excel-export": "12.1.0",
-    "@progress/kendo-angular-icons": "12.1.0",
-    "@progress/kendo-angular-inputs": "12.1.0",
-    "@progress/kendo-angular-intl": "12.1.0",
-    "@progress/kendo-angular-l10n": "12.1.0",
-    "@progress/kendo-angular-label": "12.1.0",
-    "@progress/kendo-angular-popup": "12.1.0",
-    "@progress/kendo-angular-utils": "12.1.0",
-    "@progress/kendo-angular-treeview": "12.1.0",
-    "@progress/kendo-angular-dialog": "12.1.0",
-    "@progress/kendo-svg-icons": "^1.0.0",
-    "@angular/localize": "^15.2.0"
+    "zone.js": "~0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.2.6",
